--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@coral-xyz/anchor": "^0.28.1-beta.1",
     "@solana/web3.js": "^1.78.0",
     "axios": "^1.4.0",
+    "axios-retry": "^3.5.1",
     "bs58": "^5.0.0",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "tweetnacl": "^1.0.3"
   }
 }
