--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
 deploy:
   stage: deploy
   script:
-    - npm ci
+    - yarn
     - git config --global user.email "dev@nosana.io"
     - git config --global user.name "Nosana"
-    - npm publish      
+    - yarn run publish      
