--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "example": "npx ts-node --esm example.ts",
-    "publish": "npm version patch && npm run build && npm publish --access public"
+    "publish:public": "npm version patch && npm run build && npm publish --access public"
   },
   "keywords": [],
   "author": "Laurens Verspeek",
