--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosana/sdk",
-  "version": "0.1.30",
+  "version": "0.1.31",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "build:browser": "microbundle -o umd --no-compress --format umd --name Nosana",
+    "build:browser": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
     "example": "npx ts-node --esm example.ts",
     "publish:public": "npm version patch && npm run build && npm run build:browser && npm publish --access public"
@@ -24,6 +24,9 @@
   "author": "Laurens Verspeek",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@types/node": "^20.3.2",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.0.1",
@@ -35,6 +38,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "microbundle": "^0.15.1",
     "prettier": "^2.8.8",
+    "rollup": "^3.26.3",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "typescript": "*"
   },
   "dependencies": {
@@ -44,6 +49,7 @@
     "axios-retry": "^3.5.1",
     "bs58": "^5.0.0",
     "node-fetch": "^3.3.1",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "util": "^0.12.5"
   }
 }
