--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "unpkg": "dist/index.umd.js",
+  "browser": "dist/index.browser.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
@@ -35,7 +36,6 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
-    "microbundle": "^0.15.1",
     "prettier": "^2.8.8",
     "rollup": "^3.26.3",
     "rollup-plugin-polyfill-node": "^0.12.0",
