--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "unpkg": "dist/index.umd.js",
   "browser": "dist/index.browser.js",
+  "module": "dist/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
