--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.2",
+    "@types/figlet": "^1.5.6",
     "@types/node": "^20.3.2",
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
@@ -51,6 +52,7 @@
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "commander": "^11.0.0",
+    "figlet": "^1.6.0",
     "node-fetch": "^3.3.1",
     "tweetnacl": "^1.0.3",
     "util": "^0.12.5",
