--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@nosana/sdk",
-  "version": "0.1.46",
+  "version": "0.1.47",
   "description": "",
   "main": "dist/index.js",
+  "bin": {
+    "nosana": "./dist/cli.js"
+  },
   "types": "dist/index.d.ts",
   "unpkg": "dist/index.umd.js",
   "browser": "dist/index.browser.js",
