--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosana/sdk",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "dist/index.js",
   "bin": {
@@ -32,6 +32,7 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.2",
     "@types/figlet": "^1.5.6",
+    "@types/inquirer": "^9.0.3",
     "@types/node": "^20.3.2",
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
@@ -56,6 +57,7 @@
     "buffer": "^6.0.3",
     "commander": "^11.0.0",
     "figlet": "^1.6.0",
+    "inquirer": "^9.2.11",
     "node-fetch": "^3.3.1",
     "tweetnacl": "^1.0.3",
     "util": "^0.12.5",
