--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/figlet": "^1.5.6",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^20.3.2",
+    "@types/tar": "^6.1.6",
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.0.1",
@@ -59,6 +60,8 @@
     "figlet": "^1.6.0",
     "inquirer": "^9.2.11",
     "node-fetch": "^3.3.1",
+    "tar": "^6.2.0",
+    "tar-buffer": "^1.3.0",
     "tweetnacl": "^1.0.3",
     "util": "^0.12.5",
     "yargs": "^17.7.2"
