--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "@nosana/sdk",
-  "version": "0.2.19",
+  "version": "0.2.20",
   "description": "",
   "main": "dist/index.js",
   "bin": {
     "nosana": "./dist/cli.js"
   },
   "types": "dist/index.d.ts",
-  "unpkg": "dist/index.umd.js",
-  "browser": "dist/index.browser.js",
   "module": "dist/index.js",
   "type": "module",
   "scripts": {
@@ -16,7 +14,7 @@
     "build:browser": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
     "example": "npx ts-node --esm examples/example.ts",
-    "publish:public": "npm version patch && npm run build && npm run build:browser && npm publish --access public"
+    "publish:public": "npm version patch && npm run build && npm publish --access public"
   },
   "keywords": [],
   "files": [
