--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "@nosana/sdk",
-  "version": "0.2.29",
+  "name": "@nosana/cli",
+  "version": "0.1.0",
   "description": "",
-  "main": "dist/index.js",
   "bin": {
-    "nosana": "./dist/cli.js"
+    "nosana": "./dist/index.js"
   },
-  "types": "dist/index.d.ts",
-  "unpkg": "dist/index.umd.js",
-  "browser": "dist/index.browser.js",
-  "module": "dist/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "build:browser": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "npx ts-node --esm examples/example.ts",
-    "publish:public": "npm version patch && npm run build && npm run build:browser && npm publish --access public"
+    "publish:public": "npm version patch && npm run build && npm publish --access public"
   },
   "keywords": [],
   "files": [
@@ -28,15 +21,10 @@
   "author": "Laurens Verspeek",
   "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.3",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-typescript": "^11.1.2",
     "@types/figlet": "^1.5.6",
     "@types/inquirer": "^9.0.3",
-    "@types/mime-types": "^2.1.3",
     "@types/node": "^20.3.2",
     "@types/tar": "^6.1.6",
-    "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
@@ -46,27 +34,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.8.8",
-    "rollup": "^3.26.3",
-    "rollup-plugin-polyfill-node": "^0.12.0",
     "typescript": "*"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.28.1-beta.1",
-    "@solana/spl-token": "^0.3.8",
+    "@nosana/sdk": "^0.2.31",
     "@solana/web3.js": "^1.78.0",
-    "axios": "^1.4.0",
-    "axios-retry": "^3.5.1",
-    "bs58": "^5.0.0",
-    "buffer": "^6.0.3",
     "commander": "^11.0.0",
     "figlet": "^1.6.0",
-    "form-data": "^4.0.0",
     "inquirer": "^9.2.11",
-    "node-fetch": "^3.3.1",
     "tar": "^6.2.0",
     "tar-buffer": "^1.3.0",
-    "tweetnacl": "^1.0.3",
-    "util": "^0.12.5",
-    "yargs": "^17.7.2"
+    "util": "^0.12.5"
   }
 }
