--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosana/cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "bin": {
     "nosana": "./dist/index.js"
@@ -43,6 +43,7 @@
     "commander": "^11.0.0",
     "figlet": "^1.6.0",
     "inquirer": "^9.2.11",
+    "node-fetch": "^3.3.2",
     "tar": "^6.2.0",
     "tar-buffer": "^1.3.0",
     "util": "^0.12.5"
