--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "type": "module",
   "scripts": {
+    "dev": "npx ts-node src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish:public": "npm version patch && npm run build && npm publish --access public"
