--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "@coral-xyz/anchor": "^0.28.1-beta.1",
     "@nosana/sdk": "^0.2.35",
     "@solana/web3.js": "^1.78.0",
+    "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "figlet": "^1.6.0",
     "node-fetch": "^3.3.2",
+    "ora": "^8.0.1",
     "tar": "^6.2.0",
     "tar-buffer": "^1.3.0",
     "util": "^0.12.5"
