--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "@solana/web3.js": "^1.78.0",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
+    "dockerode": "^4.0.2",
     "figlet": "^1.6.0",
     "node-fetch": "^3.3.2",
     "ora": "^8.0.1",
+    "stream": "^0.0.2",
     "tar": "^6.2.0",
     "tar-buffer": "^1.3.0",
     "util": "^0.12.5"
