--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Laurens Verspeek",
   "license": "ISC",
   "devDependencies": {
+    "@types/dockerode": "^3.3.23",
     "@types/figlet": "^1.5.6",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^20.3.2",
