--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "commander": "^11.0.0",
     "dockerode": "^4.0.2",
     "figlet": "^1.6.0",
+    "lowdb": "^7.0.1",
     "node-fetch": "^3.3.2",
     "ora": "^8.0.1",
     "shell-quote": "^1.8.1",
