validate job definition

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,13 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "plugins": [
+      {
+        "transform": "typia/lib/transform"
+      }
+    ],
+    "strictNullChecks": true
   },
   "ts-node": {
     "esm": true,
