--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.28.1-beta.1",
+    "@inquirer/prompts": "^4.3.0",
     "@nosana/sdk": "^0.3.10",
     "@solana/web3.js": "^1.78.0",
     "chalk": "^5.3.0",
