--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosana/cli",
-  "version": "0.1.7",
+  "version": "0.0.0",
   "description": "",
   "bin": {
     "nosana": "./dist/index.js"
@@ -10,7 +10,7 @@
     "dev": "ts-node src/index.ts",
     "build": "npm run prepare && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish:public": "npm version patch && npm run build && npm publish --access public",
+    "publish:public": "npm run build && npm publish --access public",
     "prepare": "ts-patch install && typia patch"
   },
   "keywords": [],
@@ -39,7 +39,6 @@
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.2",
-    "ts-patch": "^3.1.2",
     "typescript": "5.3.2"
   },
   "dependencies": {
@@ -57,6 +56,7 @@
     "stream": "^0.0.2",
     "tar": "^6.2.0",
     "tar-buffer": "^1.3.0",
+    "ts-patch": "^3.1.2",
     "typia": "^5.4.14",
     "util": "^0.12.5"
   }
