--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,10 @@ npm prettier:
   stage: test
   script:
     - npm ci
-    - npm run prettier:fix # todo: fix eslint
+    - npm run prettier # todo: fix eslint
+  rules:
+    - if: $CI_MERGE_REQUEST_ID
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 npm publish:
   image: node:20.11.1
