--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "dockerode": "^4.0.2",
+    "dotenv": "^16.4.5",
     "figlet": "^1.6.0",
     "lowdb": "^7.0.1",
     "node-fetch": "^3.3.2",
