--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@solana/web3.js": "^1.78.0",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
+    "cron": "^3.1.6",
     "dockerode": "^4.0.2",
     "figlet": "^1.6.0",
     "lowdb": "^7.0.1",
