remove admin_key

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,2 @@
-BACKEND_URL=https://backend.k8s.dev.nos.ci
-BACKEND_SOLANA_ADDRESS=
-ADMIN_KEY=
+BACKEND_URL=https://dashboard.k8s.dev.nos.ci/api
+BACKEND_SOLANA_ADDRESS=7rFPFnxjXHC2sfDy3qrDa9pEb4j49oivMuV7e8sYDPmB
