--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,2 @@
 BACKEND_URL=http://localhost:3000/api
-BACKEND_SOLANA_ADDRESS=
-ADMIN_KEY=adminKey
+BACKEND_SOLANA_ADDRESS=7rFPFnxjXHC2sfDy3qrDa9pEb4j49oivMuV7e8sYDPmB
