--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.28.1-beta.1",
     "@inquirer/prompts": "^4.3.0",
-    "@nosana/sdk": "^0.3.16",
+    "@nosana/sdk": "^0.3.18",
     "@solana/web3.js": "^1.78.0",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
@@ -67,6 +67,7 @@
     "tar-buffer": "^1.3.0",
     "ts-patch": "^3.1.2",
     "typia": "^5.4.14",
+    "undici": "^6.14.1",
     "util": "^0.12.5"
   }
 }
