Sign message for authentication

--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,3 @@
 BACKEND_URL=https://dashboard.k8s.dev.nos.ci/api
 BACKEND_SOLANA_ADDRESS=7rFPFnxjXHC2sfDy3qrDa9pEb4j49oivMuV7e8sYDPmB
+SIGN_MESSAGE='Hello Nosana Node!'
