--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "npx cross-env APP_ENV=development ts-node src/index.ts",
     "build": "npm run prepare && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish:public": "npm run build && npm publish --access public",
@@ -56,7 +56,6 @@
     "commander": "^11.0.0",
     "cron": "^3.1.6",
     "dockerode": "^4.0.2",
-    "dotenv": "^16.4.5",
     "figlet": "^1.6.0",
     "lowdb": "^7.0.1",
     "node-fetch": "^3.3.2",
