--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "@inquirer/prompts": "^4.3.0",
     "@nosana/sdk": "^0.3.22",
     "@solana/web3.js": "^1.78.0",
+    "@types/express": "^4.17.21",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "cron": "^3.1.6",
     "dockerode": "^4.0.2",
+    "express": "^4.19.2",
     "figlet": "^1.6.0",
     "lowdb": "^7.0.1",
     "node-fetch": "^3.3.2",
