--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "npx cross-env APP_ENV=development ts-node src/index.ts",
     "build": "npm run prepare && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "APP_ENV=development jest --watch",
     "publish:public": "npm run build && npm publish --access public",
     "prepare": "ts-patch install && typia patch",
     "prettier": "prettier --check .",
@@ -29,13 +29,19 @@
   "author": "Laurens Verspeek",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/dockerode": "^3.3.23",
     "@types/figlet": "^1.5.6",
     "@types/inquirer": "^9.0.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.3.2",
     "@types/shell-quote": "^1.7.5",
     "@types/tar": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
@@ -43,9 +49,12 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "typescript": "5.3.2"
+    "ts-patch": "^3.2.0",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.28.1-beta.1",
@@ -65,7 +74,6 @@
     "stream": "^0.0.2",
     "tar": "^6.2.0",
     "tar-buffer": "^1.3.0",
-    "ts-patch": "^3.1.2",
     "typia": "^5.4.14",
     "undici": "^6.14.1",
     "util": "^0.12.5"
