--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,13 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": false,
+    "noEmit": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "outDir": "dist",
+    "outDir": "/dist",
     "declaration": true,
     "plugins": [
       {
@@ -20,7 +22,13 @@
     "strictNullChecks": true
   },
   "ts-node": {
-    "esm": true
+    "esm": true,
+    "target": "ES2021",
+    "module": "ESNext"
+  },
+  "baseUrl": "./",
+  "paths": {
+    "*": ["src/*"]
   },
   "include": ["src/**/*"]
 }
