--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,11 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": false,
-    "noEmit": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "outDir": "/dist",
+    "outDir": "dist",
     "declaration": true,
     "plugins": [
       {
@@ -25,10 +24,6 @@
     "esm": true,
     "target": "ES2021",
     "module": "ESNext"
-  },
-  "baseUrl": "./",
-  "paths": {
-    "*": ["src/*"]
   },
   "include": ["src/**/*"]
 }
