--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "commander": "^11.0.0",
     "cron": "^3.1.6",
     "dockerode": "^4.0.2",
+    "dotenv": "^16.4.5",
     "figlet": "^1.6.0",
     "lowdb": "^7.0.1",
     "node-fetch": "^3.3.2",
