--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "npx cross-env APP_ENV=development ts-node src/index.ts",
     "build": "npm run prepare && tsc",
     "test": "APP_ENV=development jest --watch",
+    "test:coverage": "APP_ENV=development jest --coverage",
     "publish:public": "npm run build && npm publish --access public",
     "prepare": "ts-patch install && typia patch",
     "prettier": "prettier --check .",
