--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
 
 npm prettier:
   image: node:20.11.1
-  stage: pre
+  stage: test
   script:
     - npm ci
     - npm run prettier # todo: fix eslint
