--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "^29.7.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.5",
+    "ts-jest-mock-import-meta": "^1.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.2"
   },
