fix path resolution for env config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "dev": "npx cross-env APP_ENV=development ts-node src/index.ts",
-    "build": "npm run prepare && tsc",
+    "build": "npm run prepare && tsc && cp .env.production ./dist/.env.production",
     "test": "APP_ENV=development jest --watch",
     "test:coverage": "APP_ENV=development jest --coverage",
     "publish:public": "npm run build && npm publish --access public",
