--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,10 @@
     "target": "ES2021",
     "module": "ESNext"
   },
-  "include": ["src/**/*", "src/benchmark-gpu.json", "src/benchmark.json"]
+  "include": [
+    "src/**/*",
+    "src/benchmark-gpu.json",
+    "src/benchmark.json",
+    "package.json"
+  ]
 }
