--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "target": "ES2021",
     "module": "ESNext"
   },
-  "include": ["src/**/*", "src/static/*.json", "package.json"]
+  "include": ["src/**/*", "package.json"]
 }
