fix: remove DOCKER_CERT_PATH from jest

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "npx cross-env APP_ENV=development ts-node src/index.ts",
     "build": "npm run prepare && tsc && cp .env.production ./dist/",
-    "test": "APP_ENV=development jest --watch",
-    "test:coverage": "APP_ENV=development jest --coverage",
+    "test": "APP_ENV=development DOCKER_CERT_PATH= jest --watch",
+    "test:coverage": "APP_ENV=development DOCKER_CERT_PATH= jest --coverage",
     "publish:public": "npm run build && npm publish --access public",
     "prepare": "ts-patch install && typia patch",
     "prettier": "prettier --check .",
