--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "scripts": {
     "dev": "npx cross-env APP_ENV=development ts-node src/index.ts",
     "build": "npm run prepare && tsc && cp .env.production ./dist/",
+    "generate": "openapi-typescript http://dashboard.k8s.prd.nos.ci/api/swagger/json -o ./src/api/schema.d.ts",
     "test": "APP_ENV=development DOCKER_CERT_PATH= jest --watch",
     "test:coverage": "APP_ENV=development DOCKER_CERT_PATH= jest --coverage",
     "publish:public": "npm run build && npm publish --access public",
-    "prepare": "ts-patch install && typia patch",
+    "prepare": "npm run generate && ts-patch install && typia patch",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "eslint": "eslint .",
@@ -46,6 +47,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.7.0",
+    "openapi-typescript": "^7.0.2",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.5",
     "ts-jest-mock-import-meta": "^1.2.0",
@@ -62,10 +64,11 @@
     "commander": "^11.0.0",
     "cron": "^3.1.6",
     "dockerode": "^4.0.2",
-    "express": "^4.19.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "figlet": "^1.6.0",
     "lowdb": "^7.0.1",
+    "openapi-fetch": "^0.10.2",
     "ora": "^8.0.1",
     "rpc-websockets": "7.9.0",
     "shell-quote": "^1.8.1",
