Use new pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@
 include:
   - project: nosana-ci/tools/cicd/gitlab-ci
     file: docker-container.yml
+    ref: build-arg
 
 variables:
   DOCKERFILE_DIR: .
