--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "ora": "^8.0.1",
     "rpc-websockets": "7.9.0",
     "shell-quote": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "stream": "^0.0.2",
     "tar": "^6.2.0",
     "tar-buffer": "^1.3.0",
