--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/dockerode": "^3.3.23",
+    "@types/eventsource": "^1.1.15",
     "@types/figlet": "^1.5.6",
     "@types/inquirer": "^9.0.3",
     "@types/jest": "^29.5.12",
@@ -64,6 +65,7 @@
     "cron": "^3.1.6",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
+    "eventsource": "^2.0.2",
     "express": "^4.19.2",
     "figlet": "^1.6.0",
     "lowdb": "^7.0.1",
