--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "tar": "^6.2.0",
     "tar-buffer": "^1.3.0",
     "ts-patch": "^3.2.1",
+    "tweetnacl": "^1.0.3",
     "typia": "^5.4.14",
     "undici": "^6.14.1",
     "util": "^0.12.5"
