--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Laurens Verspeek",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.23",
     "@types/eventsource": "^1.1.15",
     "@types/express": "^4.17.21",
@@ -62,6 +63,7 @@
     "@solana/web3.js": "^1.78.0",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
+    "cors": "^2.8.5",
     "cron": "^3.1.6",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
