--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.28.1-beta.1",
     "@inquirer/prompts": "^4.3.0",
-    "@nosana/sdk": "^0.3.24",
+    "@nosana/sdk": "^0.3.29",
     "@solana/web3.js": "^1.78.0",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
@@ -68,6 +68,7 @@
     "eventsource": "^2.0.2",
     "express": "^4.19.2",
     "figlet": "^1.6.0",
+    "inquirer": "^11.0.2",
     "lowdb": "^7.0.1",
     "openapi-fetch": "^0.10.2",
     "openapi-typescript": "^7.1.2",
