chore: remove gpu from nginx job

--- a/job-examples/nginx.json
+++ b/job-examples/nginx.json
@@ -11,8 +11,7 @@
       "args": {
         "cmd": [],
         "image": "nginx",
-        "expose": 80,
-        "gpu": true
+        "expose": 80
       }
     }
   ]
