--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Laurens Verspeek",
   "license": "ISC",
   "devDependencies": {
+    "@types/cli-progress": "^3.11.6",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.23",
     "@types/eventsource": "^1.1.15",
@@ -62,6 +63,7 @@
     "@nosana/sdk": "^0.3.32",
     "@solana/web3.js": "^1.78.0",
     "chalk": "^5.3.0",
+    "cli-progress": "^3.12.0",
     "commander": "^11.0.0",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
