--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Laurens Verspeek",
   "license": "ISC",
   "devDependencies": {
+    "@types/bn.js": "^5.1.6",
     "@types/dockerode": "^3.3.23",
     "@types/eventsource": "^1.1.15",
     "@types/express": "^4.17.21",
@@ -60,6 +61,7 @@
     "@inquirer/prompts": "^4.3.0",
     "@nosana/sdk": "^0.3.29",
     "@solana/web3.js": "^1.78.0",
+    "bn.js": "^5.2.1",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "cron": "^3.1.6",
