--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate": "openapi-typescript http://dashboard.k8s.prd.nos.ci/api/swagger/json -o ./src/api/schema.d.ts",
     "test": "APP_ENV=development DOCKER_CERT_PATH= jest --watch",
     "test:coverage": "APP_ENV=development DOCKER_CERT_PATH= jest --coverage",
+    "publish:next": "npm run build && npm publish --tag=next --access public",
     "publish:public": "npm run build && npm publish --access public",
     "prepare": "npm run generate && ts-patch install && typia patch",
     "prettier": "prettier --check .",
