--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosana/cli",
-  "version": "0.0.0",
+  "version": "0.1.148-dev.3",
   "description": "",
   "bin": {
     "nosana": "./dist/src/index.js"
@@ -27,7 +27,8 @@
     "dist",
     "LICENSE",
     "README.md",
-    "package.json"
+    "package.json",
+    "npm-shrinkwrap.json"
   ],
   "author": "Laurens Verspeek",
   "license": "ISC",
