--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 BACKEND_URL=http://localhost:3000/api
 BACKEND_SOLANA_ADDRESS=7rFPFnxjXHC2sfDy3qrDa9pEb4j49oivMuV7e8sYDPmB
+BACKEND_AUTHORIZATION_ADDRESS=3R1YEz9crQR3tRbtSAuufjSsjQXMqtDr1D4f1YprMUSE
 SIGN_MESSAGE="Hello Nosana Node!"
 FRP_SERVER_ADDRESS=node.k8s.dev.nos.ci
 FRP_SERVER_PORT=7000
