--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 BACKEND_URL=https://dashboard.k8s.dev.nos.ci/api
 BACKEND_SOLANA_ADDRESS=7rFPFnxjXHC2sfDy3qrDa9pEb4j49oivMuV7e8sYDPmB
 BACKEND_AUTHORIZATION_ADDRESS=3R1YEz9crQR3tRbtSAuufjSsjQXMqtDr1D4f1YprMUSE
+EXPLORER_URL=https://devnet.nosana.io
 SIGN_MESSAGE="Hello Nosana Node!"
 FRP_SERVER_ADDRESS=node.k8s.dev.nos.ci
 FRP_SERVER_PORT=7000
