--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-BACKEND_URL==https://dashboard.k8s.dev.nos.ci/api
+BACKEND_URL=https://dashboard.k8s.dev.nos.ci/api
 BACKEND_SOLANA_ADDRESS=7rFPFnxjXHC2sfDy3qrDa9pEb4j49oivMuV7e8sYDPmB
 BACKEND_AUTHORIZATION_ADDRESS=3R1YEz9crQR3tRbtSAuufjSsjQXMqtDr1D4f1YprMUSE
 EXPLORER_URL=https://devnet.nosana.io
