fix(dev): correct dev script to use node with ts-node/esm

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "npx cross-env APP_ENV=development ts-node src/index.ts",
+    "dev": "APP_ENV=development node --no-warnings --loader ts-node/esm src/index.ts",
     "build": "npm run prepare && tsc && cp .env.production ./dist/ && cp .env.dev ./dist/",
     "generate": "openapi-typescript http://dashboard.k8s.prd.nos.ci/api/swagger/json -o ./src/api/schema.d.ts",
     "test": "APP_ENV=development DOCKER_CERT_PATH= jest --watch",
