feat: continous check and bump frpc

--- a/job-examples/nginx.json
+++ b/job-examples/nginx.json
@@ -19,7 +19,8 @@
                 "type": "http",
                 "path": "/",
                 "method": "GET",
-                "expected_status": 200
+                "expected_status": 200,
+                "continuous": true
               }
             ] 
           }
