--- a/job-examples/nginx-multi-ops.json
+++ b/job-examples/nginx-multi-ops.json
@@ -55,6 +55,32 @@
         "group": "run",
         "depends_on": ["nginx-1"]
       }
+    },
+            {
+      "type": "container/run",
+      "id": "nginx-3",
+      "args": {
+        "cmd": [],
+        "image": "nginx",
+        "expose": [ 
+          { 
+            "port": 80, 
+            "health_checks": [
+              {
+                "type": "http",
+                "path": "/",
+                "method": "GET",
+                "expected_status": 200,
+                "continuous": true
+              }
+            ] 
+          }
+        ]
+      },
+      "execution": {
+        "group": "run2",
+        "depends_on": []
+      }
     }
   ]
 }
