--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "tweetnacl": "^1.0.3",
     "typia": "^5.4.14",
     "undici": "^6.14.1",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "yaml": "^2.8.0"
   }
 }
