--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "chalk": "^5.3.0",
     "cli-progress": "^3.12.0",
     "commander": "^11.0.0",
+    "console-table-printer": "^2.14.6",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "dockerode": "^4.0.2",
