--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dev": "APP_ENV=development node --no-warnings --loader ts-node/esm src/index.ts",
     "build": "npm run prepare && tsc && cp .env.production ./dist/ && cp .env.dev ./dist/",
     "generate": "openapi-typescript http://dashboard.k8s.prd.nos.ci/api/swagger/json -o ./src/api/schema.d.ts",
-    "test": "APP_ENV=development DOCKER_CERT_PATH= jest --watch",
-    "test:coverage": "APP_ENV=development DOCKER_CERT_PATH= jest --coverage",
+    "test": "APP_ENV=development DOCKER_CERT_PATH= vitest run",
+    "ci:test": "APP_ENV=development DOCKER_CERT_PATH= vitest run --coverage --reporter=junit --outputFile=./test-report.xml",
+    "test:watch": "APP_ENV=development DOCKER_CERT_PATH= vitest",
+    "test:coverage": "APP_ENV=development DOCKER_CERT_PATH= vitest run --coverage",
     "publish:next": "npm run build && npm publish --tag=next --access public",
     "publish:public": "npm run build && npm publish --access public",
     "prepare": "npm run generate && ts-patch install && typia patch",
@@ -41,11 +43,11 @@
     "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.6",
     "@types/inquirer": "^9.0.3",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.3.2",
     "@types/shell-quote": "^1.7.5",
     "@types/tar": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@vitest/coverage-v8": "^4.0.7",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
@@ -54,12 +56,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.5",
-    "ts-jest-mock-import-meta": "^1.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.7",
+    "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.28.1-beta.1",
