--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,23 @@ variables:
   CONTAINER_PLATFORMS: linux/amd64
   REG_REPOSITORY: nosana/nosana-cli
 
+npm install:
+  image: node:20.11.1
+  stage: build
+  script:
+    - npm ci
+  artifacts:
+    untracked: true
+  rules:
+    - if: $CI_MERGE_REQUEST_ID
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+
 npm prettier:
   image: node:20.11.1
   stage: test
+  dependencies:
+    - npm install
   script:
-    - npm ci
     - npm run prettier # todo: fix eslint
   rules:
     - if: $CI_MERGE_REQUEST_ID
@@ -25,9 +37,17 @@ npm prettier:
 npm test:
   image: node:20.11.1
   stage: test
+  dependencies:
+    - npm install
   script:
-    - npm ci
-    - npm run test:coverage
+    - npm run ci:test
+  coverage: '/All files[^|]*\|[^|]*\|[^|]*\|[^|]*\|[^\d]*([\d\.]+)/'
+  artifacts:
+    when: always
+    paths:
+      - test-report.xml
+    reports:
+      junit: test-report.xml
   rules:
     - if: $CI_MERGE_REQUEST_ID
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
