--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "author": "Laurens Verspeek",
   "license": "ISC",
   "devDependencies": {
+    "@ryoppippi/unplugin-typia": "^2.6.5",
     "@types/bn.js": "^5.1.6",
     "@types/cli-progress": "^3.11.6",
     "@types/cors": "^2.8.17",
@@ -93,7 +94,7 @@
     "tar-buffer": "^1.3.0",
     "ts-patch": "^3.2.1",
     "tweetnacl": "^1.0.3",
-    "typia": "^5.4.14",
+    "typia": "^10.1.0",
     "undici": "^6.14.1",
     "util": "^0.12.5",
     "yaml": "^2.8.0"
