--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,5 @@ EXPLORER_URL=https://dashboard.nosana.com
 SIGN_MESSAGE="Hello Nosana Node!"
 FRP_SERVER_ADDRESS=node.k8s.prd.nos.ci
 FRP_SERVER_PORT=7000
+FRPC_CONTAINER_IMAGE=registry.hub.docker.com/nosana/frpc:v1.0.30
 MIN_DISK_SPACE=25
