--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "dev": "APP_ENV=development node --no-warnings --loader ts-node/esm src/index.ts",
-    "build": "npm run prepare && tsc && cp .env.production ./dist/ && cp .env.dev ./dist/",
+    "build": "npm run prepare && tsc && cp .env.prd ./dist/ && cp .env.dev ./dist/",
     "generate": "openapi-typescript http://dashboard.k8s.prd.nos.ci/api/swagger/json -o ./src/api/schema.d.ts",
     "test": "APP_ENV=development DOCKER_CERT_PATH= vitest run",
     "ci:test": "APP_ENV=development DOCKER_CERT_PATH= vitest run --coverage --reporter=junit --outputFile=./test-report.xml",
