--- a/auto-update/Dockerfile
+++ b/auto-update/Dockerfile
@@ -9,5 +9,6 @@ RUN npm ci \
  && npm run build \
  && npm ci --omit=dev
 ENV NODE_ENV production
+ENV APP_ENV prd
 
 ENTRYPOINT ["node", "dist/src/index.js"]
